# ray_tracing

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ray_tracing.ixx
sources/: constants.hpp  constants.ixx  main.cpp  main.ixx  models.hpp  models.ixx  ray_tracing.hpp  rays.cpp  rays.hpp  rays.ixx  rt.hpp
